# 7z-ffi-sdk

./: .gitignore  7zsdk.code-workspace  ADVANCED_FEATURES.md  BUILD_AND_USAGE.md  CAPABILITIES.md  CMakeLists.txt  CONTRIBUTING.md  C_CODE_CLEANUP_SUMMARY.md  Cargo.toml  DOCUMENTATION.md  ENCRYPTION_COMPLETE.md  ENCRYPTION_PROGRESS.md  EXTRACTION_AND_ENCRYPTION_COMPLETE.md  FAILING_TESTS_ANALYSIS.md  FEATURE_REVIEW_AND_RECOMMENDATIONS.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  LARGE_FILES_GUIDE.md  LZMA_SDK_OPTIMIZATION.md  MEMORY_SAFETY.md  MULTITHREADING_AND_TESTING_COMPLETE.md  MULTIVOLUME_STATUS.md  PERFORMANCE_RESULTS.md  PHASE1_PROGRESS.md  PHASE1_SESSION_COMPLETE.md  PRODUCTION_READY_ROADMAP.md  PRODUCTION_STREAMING.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START_ENCRYPTION.md  QUICK_START_FORENSICS.md  README-rust.md  README.md  READY_FOR_TESTING.md  ROADMAP.md  RUST-CRATE-SUMMARY.md  RUST_CRATE_STATUS.md  RUST_VALIDATION.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  (+11 more)
docs/: 7Z_CREATE_IMPLEMENTATION.md  7Z_CREATION_STATUS.md
docs/development/: CODE_REVIEW_RECOMMENDATIONS.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md
docs/guides/: QUICKSTART.md
docs/testing/: BENCHMARK_REPORT.md  TESTING_COMPLETE.md  TEST_ANALYSIS_SUMMARY.md
examples/: CMakeLists.txt  compress.c  create_7z.c  create_archive.c  decompress.c  extract.c  extract_archive.c  forensic_archiver.c  list.c  stream_compress.c  test_aes.c  test_encryption.c
include/: 7z_ffi.h
rust/: BUILD_GUIDE.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  Cargo.toml  IMPLEMENTATION_STATUS.md  INCOMPLETE_ANALYSIS.md  QUICK_START.md  README_RUST_BINDINGS.md  test_10mb_create.rs  test_formats.rs  test_mv_simple.7z  test_small_mv.7z.001  test_stream_single.7z
rust/demo_extracted_wrong/: file2.txt
rust/examples/: advanced_features.rs  forensic_archiver.rs
rust/src/: archive.rs  ffi.rs  lib.rs
rust/tests/: integration_tests.rs
src/: 7z_create.c  7z_multivolume_complete.c  7z_multivolume_complete.c.backup  ffi_interface.c
tauri/: tauri-integration.md
test_data/: readme.md  test1.txt  test2.txt
