[package]
name = "seven-zip"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Rust bindings for 7z archive operations (extract, list, compress) using LZMA2"
repository = "https://github.com/yourusername/7z-ffi-sdk"
documentation = "https://docs.rs/seven-zip"
keywords = ["7z", "lzma2", "compression", "archive", "extraction"]
categories = ["compression", "filesystem"]
readme = "README.md"

[lib]
name = "seven_zip"
path = "rust/src/lib.rs"

[dependencies]
libc = "0.2"
thiserror = "1.0"
# Pure Rust AES encryption (no OpenSSL dependency)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
cc = "1.0"
cmake = "0.1"

[features]
default = ["static"]
static = []  # Statically link the C library
dynamic = []  # Dynamically link to system library

# Examples commented out - to be implemented
# [[example]]
# name = "extract"
# path = "rust/examples/extract.rs"

# [[example]]
# name = "list"
# path = "rust/examples/list.rs"

# [[example]]
# name = "compress"
# path = "rust/examples/compress.rs"

# [[example]]
# name = "create_archive"
# path = "rust/examples/create_archive.rs"

# [[example]]
# name = "smoke_test"
# path = "rust/examples/smoke_test.rs"

[[example]]
name = "test_multivolume"
path = "rust/examples/test_multivolume.rs"

[[example]]
name = "test_mv_verify"
path = "rust/examples/test_mv_verify.rs"

[[example]]
name = "create_mv_test"
path = "rust/examples/create_mv_test.rs"

[[example]]
name = "large_file_demo"
path = "rust/examples/large_file_demo.rs"

[[test]]
name = "integration_tests"
path = "rust/tests/integration_tests.rs"
